fix(Badge): Truncate badges with long text, make the smallest badge a perfect circle (#5569)
* Badge uses inline-block

* 1 character long badge is a perfect circle

* fixed a comment typo

* Badge min width is derived from padding and line height

--- a/scss/_patterns_badge.scss
+++ b/scss/_patterns_badge.scss
@@ -6,11 +6,17 @@
     background-color: $colors--theme--text-default; // inverse the theme by using the text color
     border-radius: 1rem;
     box-sizing: content-box;
-    color: $colors--theme--background-default; // inverse the theme by using the baackground color
+    color: $colors--theme--background-default; // inverse the theme by using the background color
+    display: inline-block;
     margin-bottom: 0;
     max-width: 4ch;
+    // the minimum content width should be the total desired width (the line-height)
+    // minus the space already taken up by the left and right padding
+    // Makes the shortest badge a perfect circle and keeps it related to line-height (of %x-small-text) and padding (below)
+    min-width: map-get($line-heights, x-small) - (2 * $spv--x-small);
     overflow: hidden;
     padding: 0 $spv--x-small;
+    text-align: center;
   }
 
   .p-badge,
